--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
       </footer>
     </main>
 
-    <button id="fab" class="fab only-mobile">＋</button>
+    <!-- <button id="addBtn" class="add-btn">+</button> -->
   </div>
 
   <div id="overlay" class="overlay"></div>
