--- a/static/css/dark.css
+++ b/static/css/dark.css
@@ -77,6 +77,14 @@ body{margin:0;font-family:"Cairo",system-ui,Segoe UI,Roboto,Arial;color:var(--fg
   .only-mobile{display:inline-grid}
   .topbar{top:12px}
   .main{min-height:calc(100dvh - 24px)}
+  .chat-item.exit {
+  color: red;
+  font-weight: bold;
+  cursor: pointer;
+}
+.chat-item.exit:hover {
+  background: #ffe5e5;
+}
  .messages {
   padding: 10px;
   max-height: 70vh;       /* يخلي الرسائل محصورة بارتفاع 70% من الشاشة */
